--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -325,6 +325,13 @@ img{
     background-color: transparent;
     color: var(--first-color-alt);
 }
+.button--white{
+    background-color: #FFF;
+    color: var(--first-color);
+}
+.button--white:hover{
+    background-color: #FFF;
+}
 
 
 /*==================== ABOUT ====================*/
@@ -675,6 +682,28 @@ img{
 
 
 /*==================== PROJECT IN MIND ====================*/
+.project{
+    text-align: center;
+}
+.project__bg{
+    background-color: var(--first-color-second);
+    padding-top: 3rem;
+}
+.project__title{
+    font-size: var(--h2-font-size);
+    margin-bottom: var(--mb-0-75);
+}
+.project__description{
+    margin-bottom: var(--mb-1-5);
+}
+.project__title,
+.project__description{
+    color: #FFF;
+}
+.project__img{
+    width: 232px;
+    justify-self: center;
+}
 
 
 /*==================== TESTIMONIAL ====================*/
