--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1126,6 +1126,9 @@ img{
     .footer__container{
         padding: 0;
     }
+    .home__description{
+        max-width: 350px;
+    }
     .home__blob{
         width: 320px;
     }
